2013-05-01  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* NEWS: 2.1 release.

2013-04-30  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* twitter/tweetentry.py: Fixed an entry atribute.

2013-04-29  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* de_DE.po: Updated German translation.  Thanks t_bb_!
	* es_ES.po: Updated Spanish translation.  Thanks Adolfo Jayme!
	* twittytwister/streaming.py: Fixed incompatibility with Twisted
	  12.3.0. Thanks Ralph Meijer! Applyed his patch from his git branch.
	* twittytwister/twitter.py (Twitter._urlencode): Fixed a '/' quote
	  problem.
	* menu.py, preferences.py, preferences.glade: Removed a 'View
	  Conversation' menu item. The API is not supported Twitter API 1.1.

2013-04-28  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* twitter/account.py, twitter/output.py, tweetentry.py:
	  Added support for Twitter API 1.1 (issue #23).

2013-04-27  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* twittytwister/twitter.py: Updated streaming API endpoints.
	* twittytwister/*: Updated twitty-twister.
	* ar.po: Updated Arabic translation.  Thanks Humaidan Mohammed!
	* de_DE.po: Updated German translation.  Thanks t_bb_!

2013-04-26  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* window.py: Fixed problems for removing tab.
	* view.py: Added checking duplicate posts.

2013-04-25  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* liststore.py, view.py: Added support for feeds unification.
	* tumblr/entry.py: Added support for notification of Tumblr.

2013-04-23  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* fontawesome-webfont.woff, font-awesome.min.css: Added Font
	  Awesome Support.
	* twitter/tweetentry.py, theme/Default/status.html, view.py:
	  Improved a scheme for Twitter interfaces.

2013-04-22  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* ar.po: Updated Arabic translation.  Thanks Humaidan Mohammed!
	* de_DE.po: Updated German translation.  Thanks t_bb_!
	* es_ES.po: Updated Spanish translation.  Thanks Adolfo Jayme!
