@@ -1,3 +1,8 @@
+2013-05-13  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
+
+	* updatewindow.py (UpdateWindow): Added support to insert quote on
+	  reply windows (issue #28).
+
 2013-05-01  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
 
 	* NEWS: 2.1 release.
